--- a/automacao.html
+++ b/automacao.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="pt-br">
     <head>
@@ -21,6 +20,8 @@
     </head>
     <body class="no-js">
 
+
+
         <header class="header">
           <a href="index.html" class="logo-text">HUB</a>
 
@@ -28,27 +29,125 @@
 
           <nav class="header__nav">
             <ul>
-              <li><a href="loja.html">LOJA VIRTUAL</a></li>
-              <li><a href="web.html">WEB SITE</a></li>
+              <li><a href="https://hubdigitals.ysaas.website/">SOFTWARE</a></li>
               <li><a href="automacao.html">AUTOMAÇÃO</a></li>
               <li><a href="marketing.html">MARKETING</a></li>
-              <li><a href="desing.html">DESING</a></li>
-              <li><a href="contato.html">CONTATO</a></li>
+              <li><a href="https://hubdigitals.ysaas.website/contato">CONTATO</a></li>
+              <li><a href="https://sistema.hubdigitals.com/Login.aspx?ReturnUrl=%2f" style="color: blue;">ENTRAR</a></li>
+
             </ul>
+            <div style="border-top: 1px solid transparent;"></div>
           </nav>
+          <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AUTOMAÇÃO</h1>
         </header >
 
 
+        <style>
+   h1 {
+        font-size: 2rem;
+        padding: 10px 20px; /* Adiciona espaçamento interno */
+        background-color: rgb(57, 100, 150); /* Cor de fundo azul */
+        color: #fff; /* Cor do texto branco */
+        border-radius: 1px; /* Borda arredondada */
+        width: 400px; /* Define a largura baseada no conteúdo */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+          .container2 {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              height: 100vh; /* Define a altura da tela inteira */
 
-        <section class="hero">
-          <img src="img/b2.png" alt="Carousel Img">
-          <h1 class="hero__title">
-               SOLUÇÕES DIGITAIS  <abbr title="Wordpress"></abbr>
-          </h1>
 
-          <p class="hero__text">Temos a solução para automatizar o seu negocio.</p>
+          }
 
-          <a href="#" class="hero__btn">CONTATO</a>
+          .hero1 {
+              display: flex;
+              flex-wrap: wrap; /* Permite que os elementos quebrem para a próxima linha */
+              justify-content: center;
+              align-items: center;
+              gap: 30px; /* Espaço entre os elementos */
+          }
+
+          .box-container {
+              background-color: rgb(200, 200, 200); /* Cor de fundo cinza */
+              padding: 10px; /* Espaçamento interno */
+              border-radius: 10px; /* Arredonda as bordas */
+              box-shadow: 0 6px 6px rgba(0, 0, 0, 0.553); /* Adiciona sombra preta */
+              transition: background-color 0.6s; /* Adiciona transição suave */
+          }
+
+          .box {
+              margin: 0;
+              cursor: pointer; /* Muda o cursor para indicar que é clicável */
+              text-decoration: none; /* Remove o sublinhado padrão */
+              color: black; /* Altera a cor do texto para preto */
+          }
+
+          .box-container:hover {
+              background-color: rgb(57, 100, 150); /* Muda a cor de fundo para azul ao passar o mouse */
+          }
+
+          .container {
+            text-align: center; /* Alinha todo o texto à esquerda */
+              padding: 0px 0px;
+             margin: auto;
+
+          }
+
+
+
+      </style>
+
+        <!---
+      <div class="container2">
+
+          <section class="hero1">
+              <div class="box-container"><a href="produto1.html" class="box" id="fastfood">FAST-FOOD</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="clinicas">CLINICAS</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="clinicas">CLINICAS</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="fastfood">FAST-FOOD</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="clinicas">CLINICAS</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
+          </section>
+      </div>     -->
+
+
+
+
+
+
+
+         <!--- --->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+          <section class="">
+          <hr>
+           </section>
+
+           <section class="module content">
+               <div class="container">
+
+
+               </div>
+           </section>
+
+
+
+
+
+
+
+
+
       </section>
 
         <!---->
@@ -56,14 +155,15 @@
             <section class="people-cards">
             <article class="people-cards__card">
 
-             <!---- <img src="img/c01.jpg" alt="Carousel Img" class="people-cards__image"> -->
+
 
                 <div class="people-cards__avatar">
-                  <!-- <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
+                  <img src="img/send.png">
+                <!--   <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">Automação com chatbot</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Chatbot no Direct</h2>
+                  <p class="people-cards__text">Um chatbot no direct oferece atendimento 24/7, respostas automatizadas que economizam tempo e recursos da equipe, personalização com base no histórico do cliente e aumento da satisfação do cliente, levando à fidelização e recomendação da marca. Entre em contato para saber mais!</p>
                 </div>
             </article>
 
@@ -72,11 +172,12 @@
                 <img src="img/c02.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
                 <div class="people-cards__avatar">
-               <!--   <img src="img/teamsprite_02.png" alt="Carousel Img"> -->
+                  <img src="img/whatsapp.png">
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">Automão com Python </h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Chatbot no WhatsApp</h2>
+                  <p class="people-cards__text">
+                    Automatize seu atendimento no WhatsApp com um chatbot! Oferecemos respostas instantâneas 24/7, economizando tempo e recursos da sua equipe. Personalize interações com base nas necessidades do cliente e histórico de conversas. Aumente a satisfação e fidelize clientes. Entre em contato para saber mais!</p>
                 </div>
             </article>
 
@@ -85,12 +186,15 @@
                 <!--
                 <img src="img/c03.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
+
                 <div class="people-cards__avatar">
+                  <img src="img/group.png">
               <!--   <img src="img/teamsprite_03.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">GESTÃO DE TRAFEGO</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Siga Perfis Automaticamente</h2>
+                  <p class="people-cards__text">
+                    Descubra nosso aplicativo exclusivo para seguir perfis no Instagram e Facebook com total segurança e eficiência, sem o risco de banimentos. Com nossa solução, você pode selecionar o nicho de interesse para adicionar aos seus contatos e criar leads personalizadas com seu perfil.Entre em contato para mais detalhes!</p>
                 </div>
             </article>
 
@@ -99,66 +203,46 @@
                 <img src="img/c04.jpg" alt="Carousel Img" class="people-cards__image">  -->
 
                 <div class="people-cards__avatar">
+                  <img src="img/people.png">
                <!--  <img src="img/teamsprite_04.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">DESENVOLVIMENTO DE E-COMMERCE</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Deixe de Seguir Perfis Automaticamente</h2>
+                  <p class="people-cards__text">Nosso aplicativo exclusivo pode deixar de seguir perfis que já não são do seu interesse, ou por qualquer outro motivo, no Instagram e Facebook. Com total segurança e eficiência, você pode gerenciar sua lista de contatos de forma simples e rápida.Entre em contato para mais detalhes.</p>
                 </div>
             </article>
 
         </section>
         </div>
 
-        <section class="content">
+        <section class="content"><hr>
+
         <div class="container">
 
 
           <article>
-            <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Nossa visão na HUB é capacitar empresas de todos os tamanhos e setores com soluções digitais inovadoras. Nós nos esforçamos para fornecer experiências de usuário incomparáveis ​​que impulsionem o crescimento e o sucesso. Nossa equipe se dedica a ultrapassar os limites da tecnologia e do design, garantindo que nossos clientes fiquem à frente da concorrência. Acreditamos num futuro onde a tecnologia e o design serão usados ​​para conectar pessoas e empresas de maneiras novas e estimulantes. Junte-se a nós em nossa jornada para tornar essa visão uma realidade.</p>
-            <a href="#" class="button button-primary">BUTTON</a>
-            <a href="#" class="button button-secundary">BUTTON</a>
+            <h3>Revolucionamos sua Presença Online!</h3>
+            <p>
+              Descubra um mundo de possibilidades com a Hub e nossas inovadoras aplicações! Com um chatbot no direct, você oferece atendimento 24/7, economiza tempo e recursos da equipe, personaliza interações e aumenta a satisfação do cliente, garantindo fidelização e recomendação da sua marca. Automatize seu atendimento no WhatsApp para respostas instantâneas, personalização e maior fidelização dos clientes. Com nosso aplicativo exclusivo, siga perfis no Instagram e Facebook de forma segura e eficiente, criando leads personalizadas e aumentando sua base de contatos de maneira estratégica. E se precisar gerenciar sua lista de contatos, nosso aplicativo exclusivo também pode ajudar, deixando de seguir perfis que já não são do seu interesse, de forma rápida e simples. Entre em contato agora mesmo e descubra como podemos transformar o seu negócio!</p>
+
           </article>
 
           <article>
-            <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt egestas non at odio.</p>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vitae lectus erat. Duis consequat laoreet velit. Mauris convallis, sapien sit amet scelerisque accumsan, felis urna aliquet nunc, viverra mollis odio tellus a nisl. Nulla lobortis lectus non rutrum viverra. Sed et molestie libero. Sed ut ultrices dui.</p>
+            <h3>Convertendo Leads em Oportunidades Reais!</h3>
+            <p>
+              Com as ferramentas da Hub Digital, você terá não apenas uma lead consistente, mas um funil de verdadeiros clientes, cuidadosamente segmentados e interessados em seu conteúdo. Isso significa que sua estratégia de marketing será mais eficaz, alcançando um público altamente engajado e propenso a converter. Nossas soluções garantem que você se conecte com as pessoas certas, no momento certo, aumentando sua taxa de conversão e garantindo o máximo retorno sobre o investimento em marketing. Entre em contato conosco hoje mesmo e descubra como podemos impulsionar suas estratégias para o próximo nível!</p>
           </article>
           </div>
         </section>
 
 
-        <section class="last-articles">
-            <div class="last-articles__title">
-                <div class="container">
-                    <h2>Latest Articles</h2>
-                </div>
-            </div>
 
-          <div class="last-articles__thumbs">
-              <a href="#"><img src="img/articles/01.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/02.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/03.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/04.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/05.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/06.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/07.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/08.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/09.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/10.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/11.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/12.jpg" alt=""></a>
-          </div>
-        </section>
 
         <div class="laptop-slider">
           <div class="slideshow">
-            <figure><img alt="" src="img/slider/slide-01.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-02.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-01.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-02.png" /></figure>
+
+            <figure><img alt="" src="" /></figure>
+
             <span class="prev" style="display: none;"><i class="fas fa-angle-left fa-4x"></i></span>
             <span class="next" style="display: none;"><i class="fas fa-angle-right fa-4x"></i></span>
           </div>
@@ -168,15 +252,15 @@
 
           <div class="quote-slideshow">
             <figure>
-              <h2>Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
+              <h2>Ter uma boa lead e um funil eficiente é como ter um mapa preciso em mãos!</h2>
               <figcaption>
-                Nam mi enim, auctor non ultricies.
+
               </figcaption>
             </figure>
             <figure>
-              <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</h2>
+              <h2>Cada lead é uma oportunidade de negócio e cada etapa do funil é uma chance de transformar essa lead em um cliente satisfeito!</h2>
               <figcaption>
-                Nam mi enim, auctor.
+
               </figcaption>
             </figure>
             <span class="prev" style="display:none;"><i class="fas fa-angle-left fa-2x"></i></span>
@@ -188,30 +272,46 @@
         </section>
 
         <section id="redes-sociais">
-          <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/face.png"alt="Resume"></a></abbr>
-          <abbr title="Github"><a href="http://github.com/rhaonyferraz"target="tela"><img src="redes/instagram.png"alt="git"></a></abbr>
-          <abbr title="Linkedin"><a href="http://www.linkedin.com/in/rhaony-ferraz-5a181377/"target="tela"><img src="redes/linkedin.png"alt="in"></a></abbr>
-          <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/Rhoany_12?d=m"target="tela"><img src="redes/meta4.png"alt="meta"></a></abbr>
-          <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html"target="tela"><img src="redes/communication.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
-          <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147"target="tela"><img src="redes/whatsapp.png"alt="WhatsApp-Bot"></a></abbr>
+          <abbr title="Facebook"><a href="https://www.facebook.com/profile.php?id=61557462613593"target="tela"><img src="redes/face.png"alt="Resume"></a></abbr>
+          <abbr title="Instagram"><a href="https://www.instagram.com/hub_digital_/"target="tela"><img src="redes/instagram.png"alt="git"></a></abbr>
+          <abbr title="Linkedin"><a href="https://www.linkedin.com/in/hub-digital-810069307?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B1kGjTasjTdeB%2B86nZN34gA%3D%3D"target="tela"><img src="redes/linkedin.png"alt="in"></a></abbr>
+          <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/hub@hubdigitals=m"target="tela"><img src="redes/meta4.png"alt="meta"></a></abbr>
+          <abbr title="@hub"><a href="https://hubdigitals.ysaas.website/contato"target="tela"><img src="redes/communication.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
+          <abbr title="WhatsApp-ChatBot"><a href="https://wa.me/353838752770"target="tela"><img src="redes/whatsapp.png"alt="WhatsApp-Bot"></a></abbr>
        </section>
+ <!---
+
+
 
         <footer class="footer">
             <div class="container">
                 <h2 class="footer__logo"></h2>
 
                 <p>
+
                   Fundada em 2017 como <a href="https://bridgetrade.biz/pt_br/">Bridge Trade</a>, nossa empresa tinha a missão de aproximar as pequenas empresas do comércio internacional. Desde então, evoluímos e expandimos nossas operações, e hoje atuamos também no mercado nacional como HUB Soluções Digitais. A HUB é reconhecida por oferecer uma ampla gama de serviços relacionados ao e-commerce e criação de software, atendendo às necessidades do mercado digital com excelência.</p>
-        </footer>
+
+
+
+
+            </div>
+        </footer> --->
 
         <script src="js/menu.js"></script>
         <script src="js/carousel.js"></script>
 
         <script src="js/main.js"></script>
 
-        <a id="iconeFixo" href="caminho/do/arquivo.html">
-          <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+
+        <a id="iconeFixo" href="https://wa.me/353838752770">
+          <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
         </a>
+
+
+
+
+
+        </div>
 
     </body>
 </html>
