--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <nav class="header__nav">
             <ul>
               <li><a href="https://hubdigitals.ysaas.website/">SOFTWARE</a></li>
-              <li><a href="programas1.html">AUTOMAÇÃO</a></li>
-              <li><a href="marketing1.html">MARKETING</a></li>
+              <li><a href="automacao.html">AUTOMAÇÃO</a></li>
+              <li><a href="marketing.html">MARKETING</a></li>
               <li><a href="https://hubdigitals.ysaas.website/contato">CONTATO</a></li>
               <li><a href="https://sistema.hubdigitals.com/Login.aspx?ReturnUrl=%2f" style="color: blue;">ENTRAR</a></li>
 
@@ -108,7 +108,10 @@
                 <img src="img/c03.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
                 <div class="people-cards__avatar">
-               <img src="img/chatbot (2).png" alt="Carousel Img">
+                  <a id="iconeFixo" href="https://wa.me/353838752770">
+                    <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+                  </a>
+
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">REDE SOCIAL E CHATBOT</h2>
@@ -214,13 +217,12 @@
         </section>
 
         <section id="redes-sociais">
-          <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/face.png"alt="Resume"></a></abbr>
-          <abbr title="Github"><a href="http://github.com/rhaonyferraz"target="tela"><img src="redes/instagram.png"alt="git"></a></abbr>
-          <abbr title="Linkedin"><a href="http://www.linkedin.com/in/rhaony-ferraz-5a181377/"target="tela"><img src="redes/linkedin.png"alt="in"></a></abbr>
-          <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/Rhoany_12?d=m"target="tela"><img src="redes/meta4.png"alt="meta"></a></abbr>
-          <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html"target="tela"><img src="redes/communication.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
-          <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147"target="tela"><img src="redes/whatsapp.png"alt="WhatsApp-Bot"></a></abbr>
-
+          <abbr title="Facebook"><a href="https://www.facebook.com/profile.php?id=61557462613593"target="tela"><img src="redes/face.png"alt="Resume"></a></abbr>
+          <abbr title="Instagram"><a href="https://www.instagram.com/hub_digital_/"target="tela"><img src="redes/instagram.png"alt="git"></a></abbr>
+          <abbr title="Linkedin"><a href="https://www.linkedin.com/in/hub-digital-810069307?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B1kGjTasjTdeB%2B86nZN34gA%3D%3D"target="tela"><img src="redes/linkedin.png"alt="in"></a></abbr>
+          <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/hub@hubdigitals=m"target="tela"><img src="redes/meta4.png"alt="meta"></a></abbr>
+          <abbr title="@hub"><a href="https://hubdigitals.ysaas.website/contato"target="tela"><img src="redes/communication.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
+          <abbr title="WhatsApp-ChatBot"><a href="https://wa.me/353838752770"target="tela"><img src="redes/whatsapp.png"alt="WhatsApp-Bot"></a></abbr>
        </section>
 
         <footer class="footer">
