--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           </h1>
 
 
-          <a id="iconeFixo" href="caminho/do/arquivo.html" style="display: block; margin-top: 25px; margin-left: -20px;">
-            <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing"title="CHATBOT">
-        </a>
+          <a id="iconeFixo" href="https://wa.me/353838752770">
+            <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+          </a>
 
         </section>
 
@@ -108,10 +108,7 @@
                 <img src="img/c03.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
                 <div class="people-cards__avatar">
-                  <a id="iconeFixo" href="https://wa.me/353838752770">
-                    <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
-                  </a>
-
+                  <img src="img/chatbot (2).png" alt="Carousel Img">
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">REDE SOCIAL E CHATBOT</h2>
