--- a/automacao.html
+++ b/automacao.html
@@ -33,7 +33,9 @@
               <li><a href="automacao.html">AUTOMAÇÃO</a></li>
               <li><a href="marketing.html">MARKETING</a></li>
               <li><a href="https://hubdigitals.ysaas.website/contato">CONTATO</a></li>
+              <li><a href="https://titan.hostgator.com.br/login/" style="color: rgb(139, 63, 202);">CHATBOT</a></li>
               <li><a href="https://sistema.hubdigitals.com/Login.aspx?ReturnUrl=%2f" style="color: blue;">ENTRAR</a></li>
+
 
             </ul>
             <div style="border-top: 1px solid transparent;"></div>
